Bug 143176 - fix Tools->AutoCorrect->Apply and Apply and Edit Changes for Old Hungarian
Summary: fix Tools->AutoCorrect->Apply and Apply and Edit Changes for Old Hungarian
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0 target:7.2.0.0.beta2
Keywords:
Depends on:
Blocks: Old-Hungarian AutoCorrect-Complete
  Show dependency treegraph
 
Reported: 2021-07-03 11:38 UTC by László Németh
Modified: 2026-07-06 10:30 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description László Németh 2021-07-03 11:38:19 UTC
Transliteration Hungarian to Old Hungarian script works only during typing, but not for full text.

Test:

In a Hungarian document, set right-to-left of the direction of the text (with Default Paragraph Style – a requirement for AutoCorrect->Apply). Typing in the text, the new text is transliterated word-by-word to Old Hungarian. Try Tools->AutoCorrect->Apply. The text isn't transliterated to Old Hungarian script.
Comment 1 Commit Notification 2021-07-03 15:26:39 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f5ff7a967b09a715c56630aff92cfb636e7c232b

tdf#143176 Old Hungarian transliteration: fix AutoCorrect->Apply

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2021-07-03 16:51:23 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/ac647b3da0e47ebe1c83093ca3cc1aae9efd55b2

tdf#143176 Old Hungarian transliteration: fix AutoCorrect->Apply

It will be available in 7.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 DELETE ACCOUNT 2021-11-03 08:48:46 UTC
Should an icon [1] (like in `Remove Blank Cells` [2]) be added instead of using Tools ▸ AutoCorrect ▸ Apply and Tools ▸ AutoCorrect ▸ Apply and Edit Changes [3].

What do you think?

Thank you

[1] https://blog.documentfoundation.org/blog/2021/10/21/libreoffice-extension-to-remove-blank-cells-help-to-improve-it/

[2] https://github.com/rafaelhlima/remove_blank_cells

[3] https://wiki.documentfoundation.org/ReleaseNotes/7.3#Improvements_to_proofing_tools_and_language_support
Comment 4 László Németh 2021-11-03 09:19:30 UTC
(In reply to Óvári from comment #3)

It's a good idea. Likely customizing a toolbar or create an extension would be the best before fixing the following problems here:

These options don't detect that the paragraph style of the selected text is not Default Paragraph Style, which needs for Apply in most cases (no warning message, or grayed out options). Also Help lacks of the important information about Default Paragraph Style (or it's bad in the case of numbering, because Text Body styles haven't been supported any more):

https://help.libreoffice.org/7.2/en-US/text/swriter/01/05150200.html