tdf#143176 Old Hungarian transliteration: fix AutoCorrect->Apply

and "Apply and Edit Changes".

Transliteration worked only during typing, because
AutoCorrect->Apply and "Apply and Edit Changes" remove
right-to-left text direction silently, which resulted
missing transliteration of text (with Default Paragraph
Style and right-to-left direction) to Old Hungarian.

Change-Id: I1481d958494828b6dce66f2eeecb44b327c70db4