editeng/inc/edtspell.hxx
@@ -131,7 +131,8 @@ public:
 
     virtual bool        ChgAutoCorrWord( sal_Int32& rSttPos, sal_Int32 nEndPos,
                                   SvxAutoCorrect& rACorrect, OUString* pPara ) override;
-    virtual bool        TransliterateRTLWord( sal_Int32& rSttPos, sal_Int32 nEndPos ) override;
+    virtual bool        TransliterateRTLWord( sal_Int32& rSttPos, sal_Int32 nEndPos,
+                                  bool bApply = false ) override;
 
 
     virtual LanguageType GetLanguage( sal_Int32 nPos ) const override;
